<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.clientes.MenuClientesActivity">

    <Button
        android:id="@+id/btnIngresarClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresarClientes"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConsultarClientes"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/btnConsultarClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultarClientes"
        app:layout_constraintTop_toBottomOf="@id/btnIngresarClientes"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEliminarClientes"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/btnEliminarClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminarClientes"
        app:layout_constraintTop_toBottomOf="@id/btnConsultarClientes"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:layout_marginBottom="5dp"
        />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_inferior" />


</android.support.constraint.ConstraintLayout>