<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNameUser"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNameUser"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/txtNameUser"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textNameUser"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textPassword"
        android:layout_marginBottom="5dp"
        android:inputType="text"
        />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/txtNameUser"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="5dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="5dp"
            app:layout_constraintBottom_toTopOf="@id/txtPassword"
            android:layout_marginBottom="5dp"
            />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textPassword"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@id/btnIngresar"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIngresar"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        />
</android.support.constraint.ConstraintLayout>