<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.empleados.ActualizarEmpleadosActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_inferior" />

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="380dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNombreEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/nombreEmpleado"
                app:layout_constraintBottom_toTopOf="@+id/txtNombreEmpleado"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <EditText
                android:id="@+id/txtNombreEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textNombreEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textPaternoEmpleado"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@id/textPaternoEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/paternoEmpleado"
                app:layout_constraintTop_toBottomOf="@id/txtNombreEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@+id/txtPaternoEmpleado"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@id/txtPaternoEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textPaternoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textMaternoEmpleado"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/textMaternoEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/maternoEmpleado"
                app:layout_constraintTop_toBottomOf="@id/txtPaternoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@+id/txtMaternoEmpleado"
                />

            <EditText
                android:id="@+id/txtMaternoEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textMaternoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textDireccion"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/textDireccion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/direccionEmpleado"
                app:layout_constraintTop_toBottomOf="@id/txtMaternoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@+id/txtDireccion"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textDireccion"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textTelefonoEmpleado"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/textTelefonoEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/telefonoEmpleado"
                app:layout_constraintBottom_toTopOf="@+id/txtTelefonoEmpleado"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDireccion"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <EditText
                android:id="@+id/txtTelefonoEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textTelefonoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textAreaEmpleado"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/textAreaEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/areaEmpleado"
                app:layout_constraintTop_toBottomOf="@id/txtTelefonoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@id/txtAreaEmpleado"
                />

            <EditText
                android:id="@+id/txtAreaEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textAreaEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textSueldoEmpleado"
                android:layout_marginBottom="5dp"
                />


            <TextView
                android:id="@+id/textSueldoEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sueldoEmpleado"
                app:layout_constraintTop_toBottomOf="@id/txtAreaEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@+id/txtSueldoEmpleado"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/txtSueldoEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textSueldoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textUserEmpleado"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/textUserEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/UserNameEmpleado"
                app:layout_constraintTop_toBottomOf="@id/txtSueldoEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@+id/txtUserEmpleado"
                />

            <EditText
                android:id="@+id/txtUserEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/textUserEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textPasswordEmpleado"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/textPasswordEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/passwordEmpleado"
                app:layout_constraintTop_toBottomOf="@+id/txtUserEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@+id/txtPasswordEmpleado"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/txtPasswordEmpleado"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/textPasswordEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toTopOf="@+id/btnActualizarEmpleado"
                android:layout_marginBottom="5dp"
                />

            <Button
                android:id="@+id/btnActualizarEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnActualizar"
                app:layout_constraintTop_toBottomOf="@id/txtPasswordEmpleado"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="5dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="5dp"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>